Applied change AXIS2C-1476