src/core/transport/http/server/apache2/apache2_stream.c
@@ -111,7 +111,7 @@ apache2_stream_read(
     {
         read = apache2_ap_get_client_block(stream_impl->request, (char *) buffer + len,
                                    count - len);
-        if(read > 0)
+        if(read > 0 && read != 0xFFFFFFFF)
         {
             len += read;
         }
